增加记事本功能

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,17 @@
 
 
 
-            <h3 id="propertiesPanelTitle">属性面板</h3>
+            <div class="properties-panel-header">
+                <h3 id="propertiesPanelTitle">属性面板</h3>
+                <button type="button" id="propertiesFullscreenBtn" class="properties-fullscreen-btn" title="全屏切换">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="15 3 21 3 21 9"></polyline>
+                        <polyline points="9 21 3 21 3 15"></polyline>
+                        <line x1="21" y1="3" x2="14" y2="10"></line>
+                        <line x1="3" y1="21" x2="10" y2="14"></line>
+                    </svg>
+                </button>
+            </div>
 
 
 
