代码结构优化

--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
             </form>
         </div>
     </div>
-
+    <script src="/GraphEditor.js"></script>
     <script src="/app.js"></script>
     <script>
       // 顶部快捷入口
