--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,11 @@
                 <button id="undoBtn" title="后退 (Ctrl+Z)">↶</button>
                 <button id="redoBtn" title="前进 (Ctrl+Y)">↷</button>
                 <div class="diagram-type-selector">
-                    <label for="diagramType">图表类型:</label>
-                    <select id="diagramType">
-                        <option value="relationship">关系图</option>
-                        <option value="flow">流程图</option>
-                        <option value="mindmap">思维导图</option>
-                        <option value="swimlane">泳道图</option>
-                    </select>
+                    <label>图表类型:</label>
+                    <div id="diagramType" class="diagram-type-display"></div>
                 </div>
+                <button id="mermaidRenderBtn" style="display: none;">渲染图表</button>
+                <button id="mermaidSaveBtn" style="display: none;">保存图表</button>
                 <button id="addNodeBtn">+ 新增节点</button>
                 <button id="saveGraphBtn" title="保存关系图">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
