优化缩略图显示逻辑

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 
   <!-- SweetAlert2 -->
   <script src="/sweetalert2@11.js"></script>
+  
+  <!-- html2canvas for generating thumbnails -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
 </head>
 
