修复排序及调整新增图表功能

--- a/public/my.html
+++ b/public/my.html
@@ -44,11 +44,7 @@
               <div class="chart-type-icon">⬅</div>
               <div class="chart-type-name">流程图</div>
             </div>
-            <div class="chart-type-item" data-type="swimlane">
-              <div class="chart-type-icon">📋</div>
-              <div class="chart-type-name">泳道图</div>
-            </div>
-            <div class="chart-type-item" data-type="mindmap">
+            <div class="chart-type-item disabled" data-type="mindmap">
               <div class="chart-type-icon">🌳</div>
               <div class="chart-type-name">思维导图</div>
             </div>
