--- a/public/login.html
+++ b/public/login.html
@@ -80,48 +80,55 @@
       letter-spacing: -0.5px;
     }
     .slogan {
-      font-size: 32px;
+      font-size: 28px;
       font-weight: 700;
       line-height: 1.3;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
       position: relative;
       z-index: 1;
     }
     .description {
-      font-size: 15px;
+      font-size: 14px;
       line-height: 1.7;
       opacity: 0.9;
-      margin-bottom: 24px;
+      margin-bottom: 32px;
       position: relative;
       z-index: 1;
     }
     .features {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 16px;
       position: relative;
       z-index: 1;
     }
     .feature-item {
       display: flex;
       align-items: flex-start;
-      gap: 12px;
+      gap: 16px;
+      padding: 12px 0;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+    .feature-item:last-child {
+      border-bottom: none;
     }
     .feature-icon {
-      width: 24px;
-      height: 24px;
+      width: 36px;
+      height: 36px;
       background: rgba(255,255,255,0.2);
-      border-radius: 6px;
+      border-radius: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-shrink: 0;
-      margin-top: 2px;
+      font-size: 18px;
+      margin-top: 0;
     }
     .feature-text {
-      font-size: 14px;
+      font-size: 13px;
       line-height: 1.6;
       opacity: 0.95;
+      flex: 1;
     }
     .right-panel {
       flex: 1;
@@ -414,25 +421,24 @@
         </div>
         <div class="logo-text">MindMaple | 脉图</div>
       </div>
-      <h1 class="slogan">让结构可见，让关系一目了然</h1>
-      <p class="description">脉图，用"对象-属性-关系"的方式，把零散的信息连成一张网。把脑子里的想法变成看得见的图，让电脑（AI）也能理解你的业务，为数据分析提供基础，实现用数据指导决策。</p>
+      <h1 class="slogan">让想法可视化，让创意落地生根</h1>
+      <p class="description">脉图，一站式智能绘图工具，融合关系图、流程图、思维导图，把零散的信息变成结构化的视觉表达，让创意清晰可见，让决策有据可依。</p>
       <div class="features">
         <div class="feature-item">
-          <div class="feature-icon">🏢</div>
-          <div class="feature-text">组织结构：把组织架构画出来，谁负责什么、谁向谁汇报，一目了然，让管理更高效</div>
+          <div class="feature-icon">🔗</div>
+          <div class="feature-text">关系图谱：梳理复杂关系网络，人物、组织、事件的关联一目了然，发现隐藏规律</div>
         </div>
         <div class="feature-item">
-          <div class="feature-icon">👤</div>
-          <div class="feature-text">人物关系：把人物关系理清楚，谁认识谁、谁影响谁，看得明明白白，帮你发现规律</div>
-        </div>
-        <div class="feature-item">
-          <div class="feature-icon">📈</div>
-          <div class="feature-text">事件发展：把事情的前因后果连起来，预测下一步会发生什么，提前规避风险</div>
+          <div class="feature-icon">📊</div>
+          <div class="feature-text">流程图：可视化业务流程，优化工作路径，提高效率，确保流程执行一致性</div>
         </div>
         <div class="feature-item">
           <div class="feature-icon">🧠</div>
-          <div class="feature-text">知识建模：自定义你需要的对象和关系，灵活适配任何业务场景，让数据真正为你服务
-          </div>
+          <div class="feature-text">思维导图：捕捉灵感瞬间，梳理思考过程，激发创意，让思维更有条理</div>
+        </div>
+        <div class="feature-item">
+          <div class="feature-icon">🎯</div>
+          <div class="feature-text">智能分析：AI 理解你的图表，为数据分析提供基础，实现数据驱动决策</div>
         </div>
       </div>
     </div>
