--- a/public/my.html
+++ b/public/my.html
@@ -44,7 +44,7 @@
               <div class="chart-type-icon">⬅</div>
               <div class="chart-type-name">流程图</div>
             </div>
-            <div class="chart-type-item disabled" data-type="mindmap">
+            <div class="chart-type-item" data-type="mindmap">
               <div class="chart-type-icon">🌳</div>
               <div class="chart-type-name">思维导图</div>
             </div>
