增加模版广场页面

--- a/public/my.html
+++ b/public/my.html
@@ -21,7 +21,7 @@
       <button id="btnCreate" class="create-btn">+&nbsp;&nbsp;&nbsp;新建图表</button>
       <!-- 功能菜单 -->
       <div class="feature-menu">
-        <div class="feature-item" onclick="showComingSoon()">
+        <div class="feature-item" onclick="window.location.href='/templates.html'">
           <div class="feature-icon">📋</div>
           <div class="feature-text">模版广场</div>
           <div class="feature-badge hot">HOT</div>
